Fixed a bug where url display may get truncated

--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -29,6 +29,7 @@
 	padding-bottom: 10px;
 	width:350px;
 	max-width:100%;
+	word-break: break-all;
 }
 
 .display_image {
